<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".Activity.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/back"
                        android:layout_margin="20dp"
                        android:src="@drawable/ic_arrow_back_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:src="@drawable/elip1"
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:src="@drawable/elip2"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="-25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/edit_profile"
                        android:textStyle="bold"
                        android:textSize="28sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_bold"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:text="@string/let_s_edit_your_account"
                        android:layout_marginTop="-5dp"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:src="@drawable/bulet1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/avatar"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="#FE6F14"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nama_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#EEEEEE"
                            android:hint="@string/full_name"
                            android:inputType="text"
                            android:textColor="@color/colorAccent"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="#FE6F14"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit"
                            android:inputType="textEmailAddress"
                            android:background="#EEEEEE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_id"
                            android:textColor="@color/colorAccent"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="#FE6F14"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_edit"
                            android:inputType="textPassword"
                            android:background="#EEEEEE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textColor="@color/colorAccent"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="#FE6F14"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_edit"
                            android:inputType="phone"
                            android:background="#EEEEEE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:textColor="@color/colorAccent"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/save_edit"
                        android:layout_marginBottom="40dp"
                        app:cardCornerRadius="4dp"
                        android:elevation="0dp"
                        android:layout_marginTop="35dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:background="@drawable/btnoren"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/save"
                                android:textColor="@android:color/white"
                                android:layout_marginTop="15dp"
                                android:layout_marginBottom="15dp"
                                android:textAllCaps="true"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </ScrollView>
</RelativeLayout>