<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PickDateActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:paddingRight="-20dp"
        android:rotation="90"
        android:src="@drawable/elip1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:paddingRight="-20dp"
        android:rotation="90"
        android:src="@drawable/elip2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:paddingRight="-20dp"
        android:rotation="180"
        android:src="@drawable/elip1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:paddingRight="-20dp"
        android:rotation="180"
        android:src="@drawable/elip2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/back_to"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/pick_your_date"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="170dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="68dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <TextView
                    android:id="@+id/in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="18dp"
                    android:fontFamily="@font/rubik_light"
                    android:text="Check In"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pick_check_in_date"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14sp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/pick_date"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card1">

                <TextView
                    android:id="@+id/out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="18dp"
                    android:fontFamily="@font/rubik_light"
                    android:text="Check Out"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pick_check_out_date"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pick_check_in_date">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14sp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/pick_date"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/next"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="60dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:fontFamily="@font/rubik_medium"
                android:background="@drawable/btnoren"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>